--- a/app/translations/zh/LC_MESSAGES/messages.po
+++ b/app/translations/zh/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-07-18 19:15+0800\n"
+"POT-Creation-Date: 2019-07-20 21:43+0800\n"
 "PO-Revision-Date: 2019-06-28 19:41+0800\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: zh\n"
@@ -18,128 +18,9 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.7.0\n"
 
-#: app/__init__.py:35
+#: app/__init__.py:29
 msgid "Please log in to access this page."
 msgstr "请登录后再访问该页面"
-
-#: app/email.py:45
-msgid "[Microblog] Reset Your Password"
-msgstr "[Microblog]重置你的密码"
-
-#: app/forms.py:23 app/forms.py:30 app/forms.py:55
-msgid "Username"
-msgstr "用户名"
-
-#: app/forms.py:24 app/forms.py:32 app/forms.py:85
-msgid "Password"
-msgstr "密码"
-
-#: app/forms.py:25
-msgid "Remember Me"
-msgstr "记住密码"
-
-#: app/forms.py:26 app/routes.py:47 app/templates/login.html:5
-msgid "Sign In"
-msgstr "登录"
-
-#: app/forms.py:31 app/forms.py:79
-msgid "Email"
-msgstr "邮箱"
-
-#: app/forms.py:34 app/forms.py:86
-msgid "Repeat Password"
-msgstr "再一次输入密码"
-
-#: app/forms.py:35 app/routes.py:101 app/templates/register.html:8
-msgid "Register"
-msgstr "注册"
-
-#: app/forms.py:45 app/forms.py:68
-msgid "Please use a different username."
-msgstr "该昵称已被使用请使用其他昵称。"
-
-#: app/forms.py:51
-msgid "Please use a different email address."
-msgstr "该邮箱地址已被注册请使用其他电子邮件地址。"
-
-#: app/forms.py:56
-msgid "About me"
-msgstr "关于我"
-
-#: app/forms.py:57
-msgid "Submit"
-msgstr "提交"
-
-#: app/forms.py:74
-msgid "Release"
-msgstr "发布"
-
-#: app/forms.py:80 app/forms.py:87
-msgid "Request Password Reset"
-msgstr "请求密码重置"
-
-#: app/routes.py:40
-msgid "Invalid username or password"
-msgstr "用户名或密码无效"
-
-#: app/routes.py:68
-msgid "Your post is now live!"
-msgstr "发布成功！"
-
-#: app/routes.py:83 app/templates/base.html:25
-msgid "Home"
-msgstr "主页"
-
-#: app/routes.py:99
-msgid "Congratulations, you are now a registered user!"
-msgstr "恭喜您注册成功！"
-
-#: app/routes.py:140
-msgid "Your changes have been saved."
-msgstr "你的修改已被保存。"
-
-#: app/routes.py:145 app/templates/edit_profile.html:5
-msgid "Edit Profile"
-msgstr "编辑个人资料"
-
-#: app/routes.py:154 app/routes.py:171
-#, python-format
-msgid "User %(username)s not found."
-msgstr "用户 %(username)s 不存在"
-
-#: app/routes.py:157
-msgid "You cannot follow yourself!"
-msgstr "你不能关注你自己"
-
-#: app/routes.py:161
-#, python-format
-msgid "You are following %(username)s!"
-msgstr "你已经成功关注 %(username)s!"
-
-#: app/routes.py:174
-msgid "You cannot unfollow yourself!"
-msgstr "你无法取消关注自己！"
-
-#: app/routes.py:178
-#, python-format
-msgid "You are not following %(username)s."
-msgstr "您没有关注 following %(username)s."
-
-#: app/routes.py:195 app/templates/base.html:26
-msgid "Explore"
-msgstr "发现"
-
-#: app/routes.py:211
-msgid "Check your email for the instructions to reset your password"
-msgstr "查看您的电子邮件，了解重置密码的说明"
-
-#: app/routes.py:213 app/templates/reset_password_request.html:5
-msgid "Reset Password"
-msgstr "重设密码"
-
-#: app/routes.py:228
-msgid "Your password has been reset."
-msgstr "您的密码已重置。"
 
 #: app/translate.py:27 app/translate.py:48
 msgid "Error: the translation service is not  configured."
@@ -149,28 +30,136 @@ msgstr "错误：未配置翻译服务。"
 msgid "Error : the translation service failed."
 msgstr "错误：翻译服务失败。"
 
-#: app/templates/404.html:4
-msgid "File Not Found"
-msgstr "文件未找到"
+#: app/auth/email.py:17
+msgid "[Microblog] Reset Your Password"
+msgstr "[Microblog]重置你的密码"
 
-#: app/templates/404.html:5 app/templates/500.html:6
-msgid "Back"
-msgstr "返回"
+#: app/auth/forms.py:24 app/auth/forms.py:31 app/main/forms.py:20
+msgid "Username"
+msgstr "用户名"
 
-#: app/templates/500.html:4
-msgid "An unexpected error has occurred"
-msgstr "发生意外的错误"
+#: app/auth/forms.py:25 app/auth/forms.py:33 app/auth/forms.py:63
+msgid "Password"
+msgstr "密码"
 
-#: app/templates/500.html:5
-msgid "The administrator has been notified. Sorry for the inconvenience!"
-msgstr "管理员已收到通知。 抱歉给你带来不便！"
+#: app/auth/forms.py:26
+msgid "Remember Me"
+msgstr "记住密码"
 
-#: app/templates/_post.html:19
+#: app/auth/forms.py:27 app/auth/routes.py:46 app/templates/auth/login.html:5
+msgid "Sign In"
+msgstr "登录"
+
+#: app/auth/forms.py:32 app/auth/forms.py:57
+msgid "Email"
+msgstr "邮箱"
+
+#: app/auth/forms.py:35 app/auth/forms.py:64
+msgid "Repeat Password"
+msgstr "再一次输入密码"
+
+#: app/auth/forms.py:36 app/auth/routes.py:67
+#: app/templates/auth/register.html:8
+msgid "Register"
+msgstr "注册"
+
+#: app/auth/forms.py:46 app/main/forms.py:33
+msgid "Please use a different username."
+msgstr "该昵称已被使用请使用其他昵称。"
+
+#: app/auth/forms.py:52
+msgid "Please use a different email address."
+msgstr "该邮箱地址已被注册请使用其他电子邮件地址。"
+
+#: app/auth/forms.py:58 app/auth/forms.py:65
+msgid "Request Password Reset"
+msgstr "请求密码重置"
+
+#: app/auth/routes.py:39
+msgid "Invalid username or password"
+msgstr "用户名或密码无效"
+
+#: app/auth/routes.py:65
+msgid "Congratulations, you are now a registered user!"
+msgstr "恭喜您注册成功！"
+
+#: app/auth/routes.py:80
+msgid "Check your email for the instructions to reset your password"
+msgstr "查看您的电子邮件，了解重置密码的说明"
+
+#: app/auth/routes.py:82 app/templates/auth/reset_password_request.html:5
+msgid "Reset Password"
+msgstr "重设密码"
+
+#: app/auth/routes.py:97
+msgid "Your password has been reset."
+msgstr "您的密码已重置。"
+
+#: app/main/forms.py:21
+msgid "About me"
+msgstr "关于我"
+
+#: app/main/forms.py:22
+msgid "Submit"
+msgstr "提交"
+
+#: app/main/forms.py:39
+msgid "Release"
+msgstr "发布"
+
+#: app/main/forms.py:43 app/main/routes.py:176
+msgid "Search"
+msgstr ""
+
+#: app/main/routes.py:49
+msgid "Your post is now live!"
+msgstr "发布成功！"
+
+#: app/main/routes.py:65 app/templates/base.html:25
+msgid "Home"
+msgstr "主页"
+
+#: app/main/routes.py:82 app/templates/base.html:26
+msgid "Explore"
+msgstr "发现"
+
+#: app/main/routes.py:109
+msgid "Your changes have been saved."
+msgstr "你的修改已被保存。"
+
+#: app/main/routes.py:114 app/templates/edit_profile.html:5
+msgid "Edit Profile"
+msgstr "编辑个人资料"
+
+#: app/main/routes.py:123 app/main/routes.py:140
+#, python-format
+msgid "User %(username)s not found."
+msgstr "用户 %(username)s 不存在"
+
+#: app/main/routes.py:126
+msgid "You cannot follow yourself!"
+msgstr "你不能关注你自己"
+
+#: app/main/routes.py:130
+#, python-format
+msgid "You are following %(username)s!"
+msgstr "你已经成功关注 %(username)s!"
+
+#: app/main/routes.py:143
+msgid "You cannot unfollow yourself!"
+msgstr "你无法取消关注自己！"
+
+#: app/main/routes.py:147
+#, python-format
+msgid "You are not following %(username)s."
+msgstr "您没有关注 following %(username)s."
+
+#: app/templates/_post.html:21
 #, python-format
 msgid "%(username)s said %(when)s"
 msgstr "%(username)s 发布 %(when)s"
 
-#: app/templates/_post.html:29
+#: app/templates/_post.html:31
 msgid "Translate"
 msgstr "翻译"
 
@@ -182,19 +171,19 @@ msgstr "欢迎来到 Microblog"
 msgid "Toggle navigation"
 msgstr "切换导航"
 
-#: app/templates/base.html:30
+#: app/templates/base.html:39
 msgid "Login"
 msgstr "登录"
 
-#: app/templates/base.html:32
+#: app/templates/base.html:41
 msgid "Profile"
 msgstr "我的"
 
-#: app/templates/base.html:33
+#: app/templates/base.html:43
 msgid "Logout"
 msgstr "登出"
 
-#: app/templates/base.html:71
+#: app/templates/base.html:82
 msgid "Error: Could not contact server."
 msgstr "错误：无法连接服务器。"
 
@@ -202,55 +191,101 @@ msgstr "错误：无法连接服务器。"
 msgid "What's new to tell everyone?"
 msgstr "有什么新鲜事想告诉大家?"
 
-#: app/templates/index.html:19
+#: app/templates/index.html:19 app/templates/user.html:31
 msgid "Newer posts"
-msgstr "新帖子"
+msgstr "上一页"
 
-#: app/templates/index.html:24
+#: app/templates/index.html:24 app/templates/user.html:36
 msgid "Older posts"
-msgstr "旧帖子"
+msgstr "下一页"
 
-#: app/templates/login.html:12
-msgid "New User?"
-msgstr "没有账号？"
+#: app/templates/search.html:4
+msgid "Search Results"
+msgstr "搜索结果"
 
-#: app/templates/login.html:12
-msgid "Click to Register!"
-msgstr "点击注册"
+#: app/templates/search.html:12
+msgid "Previous results"
+msgstr "上一页"
 
-#: app/templates/login.html:14
-msgid "Forgot Your Password?"
-msgstr "忘记密码？"
+#: app/templates/search.html:17
+msgid "Next results"
+msgstr "下一页"
 
-#: app/templates/login.html:15
-msgid "Click to Reset It"
-msgstr "重置密码"
+#: app/templates/user.html:8
+msgid "User"
+msgstr "用户"
 
-#: app/templates/reset_password.html:5
-msgid "Reset Your Password"
-msgstr "重置你的密码"
-
-#: app/templates/user.html:12
+#: app/templates/user.html:11 app/templates/user_popup.html:13
 msgid "Last seen on"
 msgstr "上一次登录"
 
-#: app/templates/user.html:15
-msgid "followers,"
-msgstr "粉丝，"
+#: app/templates/user.html:13 app/templates/user_popup.html:16
+#, python-format
+msgid "%(count)d followers"
+msgstr "%(count)d粉丝"
+
+#: app/templates/user.html:13 app/templates/user_popup.html:17
+#, python-format
+msgid "%(count)d following"
+msgstr "%(count)d关注"
 
 #: app/templates/user.html:15
-msgid "following."
-msgstr "关注。"
-
-#: app/templates/user.html:17
 msgid "Edit your profile"
 msgstr "编辑个人资料"
 
-#: app/templates/user.html:19
+#: app/templates/user.html:17 app/templates/user_popup.html:21
 msgid "Follow"
 msgstr "关注"
 
-#: app/templates/user.html:21
+#: app/templates/user.html:19 app/templates/user_popup.html:25
 msgid "Unfollow"
 msgstr "取消关注"
+
+#: app/templates/auth/login.html:12
+msgid "New User?"
+msgstr "没有账号？"
+
+#: app/templates/auth/login.html:12
+msgid "Click to Register!"
+msgstr "点击注册"
+
+#: app/templates/auth/login.html:14
+msgid "Forgot Your Password?"
+msgstr "忘记密码？"
+
+#: app/templates/auth/login.html:15
+msgid "Click to Reset It"
+msgstr "重置密码"
+
+#: app/templates/auth/reset_password.html:5
+msgid "Reset Your Password"
+msgstr "重置你的密码"
+
+#: app/templates/errors/404.html:4
+msgid "Not Found"
+msgstr "文件未找到"
+
+#: app/templates/errors/404.html:5 app/templates/errors/500.html:6
+msgid "Back"
+msgstr "返回"
+
+#: app/templates/errors/500.html:4
+msgid "An unexpected error has occurred"
+msgstr "发生意外的错误"
+
+#: app/templates/errors/500.html:5
+msgid "The administrator has been notified. Sorry for the inconvenience!"
+msgstr "管理员已收到通知。 抱歉给你带来不便！"
+
+#~ msgid "File Not Found"
+#~ msgstr "文件未找到"
+
+#~ msgid "Toggle navigation"
+#~ msgstr "切换导航"
+
+#~ msgid "followers,"
+#~ msgstr "粉丝，"
+
+#~ msgid "following."
+#~ msgstr "关注。"
 
